<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- Button Names -->
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>

    <!-- Home Screen -->
    <string name="app_name">YeOldeTimes</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ye_olde_times">Ye Olde Times</string>
    <string name="get_started">Get Started</string>
    <string name="locate_an_image">Locate an image</string>
	<string name="gallery">Gallery</string>
	<string name="camera">Camera</string>
	<string name="url">URL</string>

	<!-- Image Fragment -->
	<string name="image_placeholder">Image placeholder</string>
	
	<string name="upload_from_url">Upload from URL</string>
	<string name="url_from_web">Url to image on the web</string>
	<string name="upload_image">Upload Image</string>
	<string name="capture_image">Capture Image</string>
	
	<!-- Get From Gallery Fragment -->
	<string name="upload_from_gallery">Upload from Gallery</string>
	
	<!-- Get From Camera Fragment -->
	<string name="upload_from_camera">Upload from Camera</string>
	
	<!-- Error Dialogs -->
	<string name="image_not_uploaded_title">You have not uploaded an image yet</string>
	<string name="image_not_uploaded_msg">You must upload an image to halftone in order to progress to the next screen.</string>
	<string name="image_not_saved_title">Your image must be saved before progressing to the Share screen</string>
	<string name="image_not_saved_msg">Is it okay to save the image to the gallery?</string>
	<string name="caption_empty_title">Your caption is empty</string>
	<string name="caption_empty_msg">Please input a caption in the text field provided and click the \'Update Caption\' button again to update your caption.</string>
	<string name="caption_too_large_title">Your caption is too large</string>
	<string name="caption_too_large_msg">Your caption must fit the width of your image.\nPlease input less text for your caption and try again.</string>
	<string name="caption_not_exist_title">There is no caption on the image</string>
	<string name="caption_not_exist_msg">There must be a caption attached to the image for you to be able to remove it.</string>
	<string name="finish_confirmation_title">Are you sure that you are done?</string>
	<string name="finish_confirmation_msg">You are about to be taken back to the home screen. If you still want to share your image with other services, please do so now.</string>
	<string name="unexpected_error_title">An unexpected error occured</string>
	<string name="unexpected_error_msg">An unexpected error occured in the Ye Olde Times application. Please relaunch the application.</string>
	<string name="halftone_error_title">An error occured while halftoning your photo</string>
	<string name="halftone_error_msg">An unexpected error occured while halftoning your photo. Verify that your photo is larger than 20 x 20 pixels and try again.</string>
	<string name="file_load_error_title">There was an error loading your image file</string>
	<string name="file_load_error_msg">Please select another image to upload into the app.</string>
	<string name="file_save_error_title">There was an error saving your image</string>
	<string name="file_save_error_msg">Try to save the image again. If the image does not save, close the Ye Olde Times application and reopen it again.</string>
	<string name="gaussian_blur_latency_title">Warning! The task that you are about to perform may take some time.</string>
	<string name="gaussian_blur_latency_msg">A strong gaussian blur takes some time to perform. Are you sure that you wish to perform a strong gaussian blur? When it has completed, this dialog will disappear.</string>
	
	<!-- Image Fragment -->
	<string name="preview">Preview</string>
	
	<!-- Newspaper Fragment -->
	<string name="choose_halftone_type">Halftone Type</string>
	<string name="dot">Dot</string>
	<string name="rectangle">Rectangle</string>
	<string name="diamond">Diamond</string>
	<string name="newspaper_desc">Newspaper image</string>
	<string name="select_halftone_grid_angle">Select Halftone Grid Angle</string>
	<string name="current_halftone_angle">Current Halftone Angle: </string>
	<string name="update_angle">Update Angle</string>
	<string name="choose_design_type">Design Type</string>
	<string name="halftone">Halftone</string>
	<string name="negative">Negative</string>
	<string name="blur">Gaussian Blur</string>
	<string name="next">Next</string>
	
	<!-- Guassian Blur Selector Fragment -->
	<string name="gaussian_blur_intensity">Gaussian Blur Intensity</string>
	<string name="weak">Weak</string>
	<string name="medium">Medium</string>
	<string name="strong">Strong</string>
	
	<!-- Add Caption Fragment -->
	<string name="input_caption">Input Caption</string>
	<string name="input_hint_text">Please input a caption for your image</string>
	<string name="update_caption">Update Caption</string>
	<string name="remove_caption">Remove Caption</string>
	
	<!-- Share -->
	<string name="share">Share</string>
	<string name="click_to_share">Click To Share</string>
	<string name="finish">Finish</string>
    
</resources>
