<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FFFFFF"
    android:orientation="vertical" >
  
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="17dp"
        android:orientation="vertical"
        android:background="@drawable/thick_border" >
        
            <TextView
            android:id="@+id/headingTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="17dp"
            android:text="@string/share"
            android:textColor="#888888"
            android:textSize="10pt" />
            
            <LinearLayout
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:layout_marginTop="17dp"
		        android:orientation="vertical"
		        android:gravity="center" >
            
            <Button
		        android:id="@+id/shareBtn"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:gravity="center"
		        android:layout_marginTop="19dp"
		        android:background="@android:drawable/btn_default"
		        android:text="@string/click_to_share" />
            
            </LinearLayout>
        
    </LinearLayout>
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@drawable/border"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:weightSum="2" >

        <Button
            android:id="@+id/shareBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/next"
            android:textColor="#000000" />
    </LinearLayout>

</RelativeLayout>
