<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >
    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="17dp"
        android:background="@drawable/thick_border" >

        <TextView
            android:id="@+id/headingTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="17dp"
            android:layout_marginTop="17dp"
            android:text="@string/upload_from_camera"
            android:textColor="#888888"
            android:textSize="10pt" />
        
       <Button
	        android:id="@+id/uploadFromCameraBtn"
	        android:layout_width="200dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/headingTxt"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="46dp"
	        android:text="@string/capture_image" />
    </RelativeLayout>
    
	<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_gravity="bottom"
        android:background="@drawable/border"
        android:gravity="right"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:weightSum="2" >
       
       <View
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:background="?android:attr/dividerVertical"/>

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/next"
            android:background="?android:attr/selectableItemBackground"
            android:textColor="#000000" />
    </LinearLayout>
    

</RelativeLayout>
